...
    },
    "message": "Password Strength: {passwordStrengthText}"
  },
  "passwordChangedSuccessfully": "Password changed successfully",
  "generatingEncryptionKeys": "Generating encryption keys...",
  "pleaseWait": "Please wait...",
  "continueLabel": "Continue",
  "insecureDevice": "Insecure device",
  "sorryWeCouldNotGenerateSecureKeysOnThisDevicennplease": "Sorry, we could not generate secure keys on this device.\n\nplease sign up from a different device.",
  "howItWorks": "How it works",
  "encryption": "Encryption",
  "ackPasswordLostWarning": "I understand that if I lose my password, I may lose my data since my data is <underline>end-to-end encrypted</underline>.",
  "privacyPolicyTitle": "Privacy Policy",
...
  "deleteFromEnte": "Delete from Ente",
  "yesDelete": "Yes, delete",
  "movedToTrash": "Moved to trash",
  "deleteFromDevice": "Delete from device",
  "deleteFromBoth": "Delete from both",
  "newAlbum": "New album",
  "albums": "Albums",
  "memoryCount": "{count, plural, =0{no memories} one{{formattedCount} memory} other{{formattedCount} memories}}",
  "@memoryCount": {
    "description": "The text to display the number of memories",
    "type": "text",
    "placeholders": {
      "count": {
...
  "pendingItems": "Pending items",
  "clearIndexes": "Clear indexes",
  "selectFoldersForBackup": "Select folders for backup",
  "selectedFoldersWillBeEncryptedAndBackedUp": "Selected folders will be encrypted and backed up",
  "unselectAll": "Unselect all",
  "selectAll": "Select all",
  "skip": "Skip",
  "updatingFolderSelection": "Updating folder selection...",
  "itemCount": "{count, plural, one{{count} item} other{{count} items}}",
  "deleteItemCount": "{count, plural, =1 {Delete {count} item} other {Delete {count} items}}",
  "duplicateItemsGroup": "{count} files, {formattedSize} each",
  "@duplicateItemsGroup": {
    "description": "Display the number of duplicate files and their size",
...
  "preserveMore": "Preserve more",
  "grantFullAccessPrompt": "Please allow access to all photos in the Settings app",
  "allowPermTitle": "Allow access to photos",
  "allowPermBody": "Please allow access to your photos from Settings so Ente can display and backup your library.",
  "openSettings": "Open Settings",
  "selectMorePhotos": "Select more photos",
  "existingUser": "Existing user",
  "privateBackups": "Private backups",
  "forYourMemories": "for your memories",
  "endtoendEncryptedByDefault": "End-to-end encrypted by default",
  "safelyStored": "Safely stored",
  "atAFalloutShelter": "at a fallout shelter",
  "designedToOutlive": "Designed to outlive",
...
  "addOns": "Add-ons",
  "addOnPageSubtitle": "Details of add-ons",
  "yourMap": "Your map",
  "modifyYourQueryOrTrySearchingFor": "Modify your query, or try searching for",
  "blackFridaySale": "Black Friday Sale",
  "upto50OffUntil4thDec": "Upto 50% off, until 4th Dec.",
  "photos": "Photos",
  "videos": "Videos",
  "livePhotos": "Live Photos",
  "searchHint1": "Fast, on-device search",
  "searchHint2": "Photo dates, descriptions",
  "searchHint3": "Albums, file names, and types",
  "searchHint4": "Location",
...
  "magicSearchHint": "Magic search allows to search photos by their contents, e.g. 'flower', 'red car', 'identity documents'",
  "panorama": "Panorama",
  "reenterPassword": "Re-enter password",
  "reenterPin": "Re-enter PIN",
  "deviceLock": "Device lock",
  "pinLock": "PIN lock",
  "next": "Next",
  "setNewPassword": "Set new password",
  "enterPin": "Enter PIN",
  "setNewPin": "Set new PIN",
  "appLock": "App lock",
  "noSystemLockFound": "No system lock found",
  "tapToUnlock": "Tap to unlock",
...
