...
  "continueLabel": "Continuar",
  "insecureDevice": "Dispositivo não seguro",
  "sorryWeCouldNotGenerateSecureKeysOnThisDevicennplease": "Desculpe, não foi possível gerar chaves seguras neste dispositivo.\n\npor favor, faça o login com um dispositivo diferente.",
  "howItWorks": "Como funciona",
  "ackPasswordLostWarning": "Eu entendo que se eu perder minha senha, posso perder meus dados, já que meus dados são <underline>criptografados de ponta a ponta</underline>.",
  "loginTerms": "Ao clicar em login, eu concordo com os <u-terms>termos de serviço</u-terms> e a <u-policy>política de privacidade</u-policy>",
  "logInLabel": "Login",
  "logout": "Encerrar sessão",
  "areYouSureYouWantToLogout": "Você tem certeza que deseja encerrar a sessão?",
  "yesLogout": "Sim, encerrar sessão",
  "exit": "Sair",
  "verifyingRecoveryKey": "Verificando chave de recuperação...",
  "recoveryKeyVerified": "Chave de recuperação verificada",
...
