...
  "encrypted": "Encrypted",
  "plainText": "Plain text",
  "passwordToEncryptExport": "Password to encrypt export",
  "export": "Export",
  "useOffline": "Use without backups",
  "signInToBackup": "Sign in to backup your codes",
  "singIn": "Sign in",
  "sigInBackupReminder": "Ente will automatically backup codes after sign-in.\n\nWe still recommend exporting codes as an extra backup.",
  "offlineModeWarning": "You have chosen to proceed without backups. Please take manual backups to make sure your codes are safe.",
  "showLargeIcons": "Show large icons",
  "compactMode": "Compact mode",
  "shouldHideCode": "Hide codes",
  "doubleTapToViewHiddenCode": "You can double tap on an entry to view code",
...
